# genetic_algorithm

./: CMakeLists.txt  mainwindow.ui  readme
src/: group_chromosome.cpp  group_chromosome.h  groupga.cpp  groupga.h  nsga.cpp
test/: CMakeLists.txt  test_ga_tool.cpp  test_nsga.cpp  test_selection_method.cpp
